--- a/PROTIFOLIO/index.html
+++ b/PROTIFOLIO/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/header.css">
     <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +39,8 @@
             <article class="text">
                 <h1>Sobre mim 🙋‍♂️</h1>
                 <p>
-                    Sou George, mineiro apaixonado por tecnologia e musica, formado em analise e desenvolvimento de sistamas
+                    Sou George, mineiro apaixonado por tecnologia e musica, formado em analise e desenvolvimento de sistemas, 
+                    sou um estudioso incansável, estudo programação diariamente, esta e a minha primeira atividade do dia,
                     pela universidade Estacio de Sá.
                 </p>
             </article>
